Finished the project

--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 		<h1>Discover hidden places in the world around you</h1>
 		<a href="">Download Excursion (Coming soon!)</a>
 	</header>
+
+	<video src="resources/excursion.mp4"></video>
+
+	<h2>Your personal travel guide</h2>
+	<p>Excursion remembers places you like and recommends new points of interest around you.</p>
+
+	<img src="resources/camp.jpg">
+		<br>
+	<img src="resources/phone.png">
+
+	<h2>Coming soon for iPhones and Android</h2>
+
+	<a href="">Download Excursion (Coming soon!)</a>
+
+	<footer>
+		<span>Ⓒ Excursion</span>
+	</footer>
 </body>
 </html>
